force-app/main/default/objects/NF_Form_Action__c/NF_Form_Action__c.object-meta.xml
<CustomObject>
    <description>Server-side executable form actions for a NativeForms form version.</description>
    <label>NF Form Action</label>
    <nameField>
        <displayFormat>ACT-{0000}</displayFormat>
        <label>Action Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NF Form Actions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>