force-app/main/default/objects/NF_Form_Action__c/fields/Action_Scope__c.field-meta.xml
<CustomField>
    <fullName>Action_Scope__c</fullName>
    <description>Whether the action belongs to prefill or submit.</description>
    <inlineHelpText>Prefill or Submit.</inlineHelpText>
    <label>Action Scope</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Prefill</fullName><default>true</default><label>Prefill</label></value>
            <value><fullName>Submit</fullName><default>false</default><label>Submit</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>