force-app/main/default/objects/NF_Form_Action__c/fields/Command_Key__c.field-meta.xml
<CustomField>
    <fullName>Command_Key__c</fullName>
    <description>Stable command key used in logs and runtime results.</description>
    <inlineHelpText>Command key.</inlineHelpText>
    <label>Command Key</label>
    <length>120</length>
    <type>Text</type>
</CustomField>