force-app/main/default/objects/NF_Form_Action__c/fields/Command_Type__c.field-meta.xml
<CustomField>
    <fullName>Command_Type__c</fullName>
    <description>Command type used by the AWS execution runtime.</description>
    <inlineHelpText>Execution command type.</inlineHelpText>
    <label>Command Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>findOne</fullName><default>true</default><label>findOne</label></value>
            <value><fullName>getById</fullName><default>false</default><label>getById</label></value>
            <value><fullName>findMany</fullName><default>false</default><label>findMany</label></value>
            <value><fullName>create</fullName><default>false</default><label>create</label></value>
            <value><fullName>update</fullName><default>false</default><label>update</label></value>
            <value><fullName>delete</fullName><default>false</default><label>delete</label></value>
            <value><fullName>upsertMany</fullName><default>false</default><label>upsertMany</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>