force-app/main/default/objects/NF_Form_Action__c/fields/Config_JSON__c.field-meta.xml
<CustomField>
    <fullName>Config_JSON__c</fullName>
    <description>Command-specific configuration JSON.</description>
    <inlineHelpText>Stores flexible command configuration such as where clauses, fields, limit, orderBy, runIf, rows, relationship settings, and delete ids.</inlineHelpText>
    <label>Config JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>