force-app/main/default/objects/NF_Form_Action__c/fields/Form_Version__c.field-meta.xml
<CustomField>
    <fullName>Form_Version__c</fullName>
    <description>Parent form version for this action.</description>
    <inlineHelpText>Form version that owns this action.</inlineHelpText>
    <label>Form Version</label>
    <referenceTo>NF_Form_Version__c</referenceTo>
    <relationshipLabel>Form Actions</relationshipLabel>
    <relationshipName>FormActions</relationshipName>
    <type>MasterDetail</type>
</CustomField>