force-app/main/default/objects/NF_Form_Action__c/fields/Object_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Api_Name__c</fullName>
    <description>Target Salesforce object for the command.</description>
    <inlineHelpText>Object API name.</inlineHelpText>
    <label>Object API Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>