force-app/main/default/objects/NF_Form_Action__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <description>Execution order within the action scope.</description>
    <inlineHelpText>Execution order.</inlineHelpText>
    <label>Order</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>