force-app/main/default/objects/NF_Form_Action__c/fields/Store_Result_As__c.field-meta.xml
<CustomField>
    <fullName>Store_Result_As__c</fullName>
    <description>Optional runtime alias used to store the command result.</description>
    <inlineHelpText>Optional runtime alias.</inlineHelpText>
    <label>Store Result As</label>
    <length>120</length>
    <type>Text</type>
</CustomField>