force-app/main/default/objects/NF_Form_Action__c/listViews/Debug_All_Records.listView-meta.xml
<ListView>
    <fullName>Debug_All_Records</fullName>
    <columns>NAME</columns>
    <columns>Form_Version__c</columns>
    <columns>Action_Scope__c</columns>
    <columns>Command_Key__c</columns>
    <columns>Command_Type__c</columns>
    <columns>Object_Api_Name__c</columns>
    <columns>Store_Result_As__c</columns>
    <columns>Order__c</columns>
    <filterScope>Everything</filterScope>
    <label>Debug - All Records</label>
</ListView>